--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
     <title>We Are Not Alone 👽</title>
 
     <style>
-		.container {
-		  height: 200px;
-		  position: relative;
-		  border: 3px solid green;
-		}
-
 		.vertical-center {
 		  margin: 0;
 		  position: absolute;
@@ -27,6 +21,9 @@
 		  transform: translateY(-50%);
 		  text-align: center;
 		  width: 100%;
+		}
+		*:focus {
+		    outline: none;
 		}
 	</style>
   </head>
