--- a/soul.html
+++ b/soul.html
@@ -10,7 +10,7 @@
 
      <link href="https://vjs.zencdn.net/7.10.2/video-js.css" rel="stylesheet" />
 
-    <title>We Are Not Alone 👽</title>
+    <title>Soul</title>
 
     <style>
 		.vertical-center {
@@ -36,7 +36,7 @@
 		    controls
 		    preload="auto"
 		    width="100%"
-		    poster="https://resizing.flixster.com/nBoor_R2dkzWCacoAdnvBeAyPMo=/ems.ZW1zLXByZC1hc3NldHMvbW92aWVzLzMzMGVmOTYwLTMyOWYtNGExMy1hYjZhLWRhZWM4Njg4ZWJkOC5qcGc="
+		    poster="https://cdn.vox-cdn.com/thumbor/52_meTnWe6gDN37aWna-7sXgvqM=/0x0:1200x680/1200x800/filters:focal(504x244:696x436)/cdn.vox-cdn.com/uploads/chorus_image/image/65103379/soul_logo_rendered_color_.0.jpg"
 		    data-setup="{}"
 		  >
 		    <source src="https://ct89-team-bucket.storage.fleek.co/Soul.2020.1080p.webm" type="video/webm" />
