--- a/calm.html
+++ b/calm.html
@@ -12,7 +12,7 @@
   </head>
   <body style="background-color: #EDF5E1">
     <div style="margin: 30px 0; text-align: center;">
-      <img style="width: 30%; border: 1px solid #666" src="https://static.wikia.nocookie.net/hbo-max/images/2/2f/A_World_of_Calm.jpeg/revision/latest/scale-to-width-down/1000?cb=20201001203940">
+      <img style="width: 30%; border: 1px solid #666" src="c.jpeg">
     </div>
     <div style="margin: 20px; text-align: center;">
 
