--- a/featured.html
+++ b/featured.html
@@ -3,11 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
-  <meta property="og:image" content="img/social-link-pic.jpg" />
+  <meta property="og:image" content="http://pixelkeet.com/img/social-link-pic.jpg" />
   <title>FEATURED by Binance - Creator Early Sign Up</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- START Google Analytics -->
+	<script type="text/javascript">
+	  var _gaq = _gaq || [];
+	  _gaq.push(['_setAccount', 'UA-34196286-1']);
+	  _gaq.push(['_trackPageview']);
+	  (function() {
+	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+	</script>
+	<!-- END Google Analytics -->
 
 </head>
 <body class="early-sign-up">
@@ -17,10 +30,13 @@
   <div class="content">
     <h1>Sign up for early access</h1>
     <p class="after-heading">Enter your email address for a chance to be one of the first creators to mint on Featured.</p>
-    <form>
+<!--     <form>
       <input type="email" placeholder="Your email"></input><button class="same-line">Sign Up</button>
-    </form>
+    </form> -->
+    <iframe src="https://cdn.forms-content.sg-form.com/b38a0957-bea0-11eb-b1dd-169c3a69515e"/>
   </div>
   <span class="copyright">&copy; 2021 Featured, Inc.</span>
+
+
 </body>
 </html>
