--- a/featured.html
+++ b/featured.html
@@ -33,7 +33,7 @@
 <!--     <form>
       <input type="email" placeholder="Your email"></input><button class="same-line">Sign Up</button>
     </form> -->
-    <iframe style="margin-top: 20px" src="https://cdn.forms-content.sg-form.com/b38a0957-bea0-11eb-b1dd-169c3a69515e" width="400px" height="320px">
+    <iframe style="margin-top: 20px" src="https://cdn.forms-content.sg-form.com/b38a0957-bea0-11eb-b1dd-169c3a69515e" width="400px" height="320px"></iframe>
   </div>
   <span class="copyright">&copy; 2021 Featured, Inc.</span>
 
